<resources>
    <string name="app_name">SignUpForm</string>
    <string name="submit">Submit</string>
    <string name="username">Username:</string>
    <string name="username_hint">Please enter your username</string>
    <string name="password">Password:</string>
    <string name="password_hint">Please enter your password</string>
    <string name="confirm">Confirm password:</string>
    <string name="confirm_hint">Please confirm your password</string>
    <string name="welcome_format">Welcome, %1$s!</string>
</resources>
